# AnyLLM2Music-backend

./: .env.template  .gitignore  Dockerfile  README.md  docker-local-test.sh  music_notes.json  music_plan.json  nginx.conf  pyproject.toml  setup.sh  supervisord.conf
.github/workflows/: deploy.yml
src/: __init__.py  logger.py  main.py  utils.py
src/config/: __init__.py  settings.py
src/prompts/: __init__.py  base.py  music_plan.py  notes_gen.py
src/routes/: llm.py  root.py
src/schemas/: music.py  openrouter.py
src/services/: __init__.py  audio_synth.py  llm.py  midi.py  music_plan.py  notes_gen.py
terraform/: aws.tf  main.tf
tests/: test_integration.py  test_llm.py  test_main.py  test_midi.py  test_music_plan.py  test_notes_gen.py  test_routes.py  test_schemas.py
