[project]
name = "template-fastapi"
version = "0.1.0"
description = "A reusable FastAPI boilerplate"
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi==0.124.2",
    "uvicorn==0.38.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "httpx==0.28.1"
    ]

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
ruff = "0.14.8"
black = "25.12.0"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
