[project]
name = "AnyLLM2Music-backend"
version = "0.1.0"
description = "AnyLLM2Music-backend"
license = { text = "MIT" }
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
ruff = "0.14.8"
black = "25.12.0"
mypy-extensions = "1.1.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
fastapi = "0.124.2"
uvicorn = "0.38.0"
pydantic = "2.12.5"
python-dotenv = "1.2.1"
httpx = "0.28.1"
mido = "1.3.3"
openai = "2.11.0"
midi2audio = "0.1.1"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
